--- a/main.vcxproj.filters
+++ b/main.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="source\GIRenderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="source\IrradianceProbeSamplingSettings.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="resources.rc" />
@@ -57,6 +54,12 @@
       <Filter>Scene Files</Filter>
     </None>
     <None Include="data-files\shaders\IrradianceField_CopyProbeEdges.pix">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\ScreenProbeUniformPlacement.glc">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\ScreenProbeAdaptivePlacement.glc">
       <Filter>Shader Files</Filter>
     </None>
   </ItemGroup>
