--- a/main.vcxproj.filters
+++ b/main.vcxproj.filters
@@ -80,6 +80,24 @@
     <None Include="data-files\shaders\WorldSpaceProbePlacement.glc">
       <Filter>Shader Files</Filter>
     </None>
+    <None Include="data-files\shaders\WorldSpaceProbeClearFreeList.glc">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\WorldSpaceProbeUpdateIndirection.glc">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\WorldSpaceProbeAllocateUsedProbe.glc">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\WorldSpaceProbeClearUpdateResources.glc">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\WorldSpaceProbeSelectMaxHistogram.glc">
+      <Filter>Shader Files</Filter>
+    </None>
+    <None Include="data-files\shaders\WorldSpaceProbeAllocateTraces.glc">
+      <Filter>Shader Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
